src/objects/Billing__c.object
<CustomObject>
    <description>Object used for tracking billing information from Oracle</description>
    <fields>
        <fullName>AR0to30__c</fullName>
        <formula>If( isblank(InvoiceDate__c)  ,0,
If( (today()- InvoiceDate__c ) &gt;= 0  &amp;&amp;  (today()- InvoiceDate__c ) &lt;= 30, BalanceDue__c , 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AR 0 to 30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AR181Plus__c</fullName>
        <formula>If( isblank(InvoiceDate__c)  ,0,
If( (today()- InvoiceDate__c ) &gt;= 181, BalanceDue__c , 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AR 181 Plus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AR31to60__c</fullName>
        <formula>If( isblank(InvoiceDate__c)  ,0,
If( (today()- InvoiceDate__c ) &gt;= 31  &amp;&amp;  (today()- InvoiceDate__c ) &lt;= 60, BalanceDue__c , 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AR 31 to 60</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AR61to90__c</fullName>
        <formula>If( isblank(InvoiceDate__c)  ,0,
If( (today()- InvoiceDate__c ) &gt;= 61  &amp;&amp;  (today()- InvoiceDate__c ) &lt;= 90, BalanceDue__c , 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AR 61 to 90</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AccountedBalanceDue__c</fullName>
        <label>Accounted Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AccountedTaxAmount__c</fullName>
        <label>Accounted Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BalanceDue__c</fullName>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillThroughDate__c</fullName>
        <label>Bill Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_InvoiceImageFileURL__c</fullName>
        <formula>IF((ISBLANK( ImageDocumentID__c )) || (ISBLANK( ImageSequenceNumber__c )), NULL, 
HYPERLINK(&quot;https://abc.aecomnet.com/aecom/jsp/pdf.jsp?&amp;docId=&quot; + SUBSTITUTE(ImageDocumentID__c, &quot;.000000000000000&quot;, &quot;&quot;) + &quot;&amp;seqNum=&quot; + SUBSTITUTE(ImageSequenceNumber__c, &quot;.000000000000000&quot;, &quot;&quot;) + &quot;&amp;projId=&quot; +  SUBSTITUTE(ProjectNumber__r.pse__Project_ID__c, &quot;.000000000000000&quot;, &quot;&quot;) + &quot;&amp;draft=&quot; +  SUBSTITUTE(DraftInvoiceNumber__c, &quot;.000000000000000&quot;, &quot;&quot;) , &quot; Billing Invoice Image &quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Invoice Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditedInvoiceNumber__c</fullName>
        <label>Credited Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <label>CustomerName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerNumber__c</fullName>
        <label>Customer Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DraftInvoiceNumber__c</fullName>
        <label>Draft Invoice Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Date__c</fullName>
        <label>GL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GL_Period_Name__c</fullName>
        <label>GL Period Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageDocumentID__c</fullName>
        <label>Image Document ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageSequenceNumber__c</fullName>
        <label>Image Sequence Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceAmount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InvoiceCreationDate__c</fullName>
        <label>Invoice Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OracleSyncErrorMessage__c</fullName>
        <label>Oracle Sync Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PA_Date__c</fullName>
        <label>PA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PA_Period_Name__c</fullName>
        <label>PA Period Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreTaxInvoiceAmount__c</fullName>
        <description>InvoiceAmount__c -  TaxAmount__c</description>
        <formula>InvoiceAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-Tax Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalInvoiceAmount__c</fullName>
        <label>Project Functional Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalPreTaxInvoiceAmoun__c</fullName>
        <description>ProjectFunctionalInvoiceAmount__c -  AccountedTaxAmount__c</description>
        <formula>ProjectFunctionalInvoiceAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Functional Pre-Tax Invoice Amoun</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalRetentionAmount__c</fullName>
        <label>Project Functional Retention Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <label>Project Number</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>RAInvoiceNumber__c</fullName>
        <externalId>true</externalId>
        <label>AR Invoice Number</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RecordStatus__c</fullName>
        <description>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</description>
        <inlineHelpText>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</inlineHelpText>
        <label>Oracle Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>P</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RetentionAmount__c</fullName>
        <label>Retention Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxAmount__c</fullName>
        <label>TaxAmount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <label>Billing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DraftInvoiceNumber__c</columns>
        <columns>InvoiceAmount__c</columns>
        <columns>InvoiceCreationDate__c</columns>
        <columns>InvoiceDate__c</columns>
        <columns>PA_Date__c</columns>
        <columns>PA_Period_Name__c</columns>
        <columns>ProjectNumber__c</columns>
        <columns>GL_Date__c</columns>
        <columns>GL_Period_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Billing Invoice #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>